export const snapshot = {};

snapshot[`parseJson > parses array-0.json 1`] = `
{
  elementType: {
    kind: "primitive",
    name: "number",
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses array-1.json 1`] = `
{
  elementType: {
    fields: Map(2) {
      "key1" => {
        kind: "primitive",
        name: "string",
      },
      "key2" => {
        kind: "primitive",
        name: "string",
      },
    },
    kind: "struct",
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses array-2.json 1`] = `
{
  elementType: {
    fields: Map(3) {
      "key1" => {
        kind: "primitive",
        name: "string",
      },
      "key2" => {
        kind: "primitive",
        name: "string",
      },
      "optional" => {
        kind: "option",
        valueType: {
          kind: "primitive",
          name: "string",
        },
      },
    },
    kind: "struct",
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses boolean-false.json 1`] = `
{
  kind: "primitive",
  name: "boolean",
}
`;

snapshot[`parseJson > parses boolean-true.json 1`] = `
{
  kind: "primitive",
  name: "boolean",
}
`;

snapshot[`parseJson > parses map-0.json 1`] = `
{
  fields: Map(4) {
    "a.b.c" => {
      kind: "primitive",
      name: "number",
    },
    "a.b.d" => {
      kind: "primitive",
      name: "number",
    },
    "a.b.e" => {
      kind: "primitive",
      name: "number",
    },
    "a.b.f" => {
      kind: "primitive",
      name: "number",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses map-1.json 1`] = `
{
  fields: Map(4) {
    "1" => {
      kind: "primitive",
      name: "number",
    },
    "2" => {
      kind: "primitive",
      name: "number",
    },
    "3" => {
      kind: "primitive",
      name: "number",
    },
    "4" => {
      kind: "primitive",
      name: "number",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses map-2.json 1`] = `
{
  fields: Map(2) {
    "key.2" => {
      kind: "primitive",
      name: "number",
    },
    "key1" => {
      kind: "primitive",
      name: "number",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses null.json 1`] = `
{
  kind: "null",
}
`;

snapshot[`parseJson > parses number-negative.json 1`] = `
{
  kind: "primitive",
  name: "number",
}
`;

snapshot[`parseJson > parses number-positive.json 1`] = `
{
  kind: "primitive",
  name: "number",
}
`;

snapshot[`parseJson > parses number-zero.json 1`] = `
{
  kind: "primitive",
  name: "number",
}
`;

snapshot[`parseJson > parses object-0.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "primitive",
      name: "string",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-1.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "primitive",
      name: "number",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-2.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "primitive",
      name: "boolean",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-3.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      elementType: {
        kind: "primitive",
        name: "string",
      },
      kind: "array",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-4.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      fields: Map(1) {
        "key" => {
          kind: "primitive",
          name: "string",
        },
      },
      kind: "struct",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-5.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "null",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-6.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      elementType: {
        fields: Map(1) {
          "key" => {
            kind: "primitive",
            name: "string",
          },
        },
        kind: "struct",
      },
      kind: "array",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-7.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      elementType: {
        kind: "enum",
        variants: Map(2) {
          "boolean" => {
            kind: "primitive",
            name: "boolean",
          },
          "string" => {
            kind: "primitive",
            name: "string",
          },
        },
      },
      kind: "array",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-8.json 1`] = `
{
  fields: Map(8) {
    "key1" => {
      kind: "primitive",
      name: "boolean",
    },
    "key2" => {
      kind: "primitive",
      name: "boolean",
    },
    "key3" => {
      kind: "null",
    },
    "key4" => {
      kind: "primitive",
      name: "number",
    },
    "key5" => {
      kind: "primitive",
      name: "number",
    },
    "key6" => {
      kind: "primitive",
      name: "string",
    },
    "key7" => {
      elementType: {
        kind: "primitive",
        name: "number",
      },
      kind: "array",
    },
    "key8" => {
      fields: Map(1) {
        "key1" => {
          kind: "primitive",
          name: "string",
        },
      },
      kind: "struct",
    },
  },
  kind: "struct",
}
`;
